--- a/css/styles.css
+++ b/css/styles.css
@@ -674,6 +674,10 @@ html {
     width: 100%;
     justify-content: flex-start;
   }
+  #home {
+    justify-content: center;
+    padding-top: 1rem;
+  }
 
   /* --- Mobile: Circle FAB-style navbar --- */
   header {
